--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,9 @@ spring:
     url: jdbc:mysql://localhost:3306/test?useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
     password: root
-  
+  security:    user:      name: admin
+      password: password
+      
   # activiti default configuration
   activiti:
     database-schema-update: true
