copy file + activiti prob file path can't be a variable

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,12 +23,14 @@ spring:
     database-schema-update: true
     db-history-used: true
     check-process-definitions: true
-    process-definition-location-prefix: classpath:/processes/
+    process-definition-location-prefix: classpath:/Workflow
     # process-definition-location-suffixes:
     # - **.bpmn
     # - **.bpmn20.xml
     history-level: audit
-
+logging:  level:
+    com.example.workflow:
+      DEBUG
 topic: workflow
       #?consumer.retroactive=true
 server:
