problem solved [with sleep(15)] :'(

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,9 @@ spring:
     password: root
   security:    user:      name: admin
       password: password
-      
+  resources:
+    static-locations:
+      file:/Workflow/**/**/**    
   # activiti default configuration
   activiti:
     database-schema-update: true
