--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<dependency>
 	      <groupId>mysql</groupId>
 	      <artifactId>mysql-connector-java</artifactId>
+	      	<version>5.1.41</version>
 	    </dependency>
         <dependency>
           <groupId>org.springframework.boot</groupId>
