--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
       #- com.example.activemq
   jms:
     pub-sub-domain: true
-  
+    template:
+      delivery-mode: persistent
   # database connection config
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
